@@ -4,9 +4,10 @@ New features, changes and fixes since gnuplot version 4.4.0
 
 * NEW Support the "%s" format specifier in strftime()
 * NEW Optional 6th data column in candlesticks style to specific box width
-* NEW if integer arithmetic i*j or i**j would overflow, return value as a real
+* NEW If integer arithmetic i*j or i**j would overflow, return value as a real
 * FIX font glitch in win terminal 
-* FIX protect against runaway recursion by limiting depth of nested functions
+* FIX Protect against runaway recursion by limiting depth of nested functions
+* FIX metapost terminal: Fix inheritance of line thickness by text strings
 
 Features, changes and fixes in gnuplot version 4.4
 ==================================================
